--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -2,21 +2,40 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/posts.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
     <title>Posts</title>
 </head>
 
 <body>
-    <nav>
-        <a href="/">Home </a> |
-        <a href="/posts">Posts page</a> |
-        <a href="/contactus">Contact us</a>
-    </nav>
-    <h1>Posts</h1>
-    <footer class="footer">
-        <p>© WAD 2021 </p>
-    </footer>
+    <div id="app">
+        <%- include('./partials/header.ejs') %>
+            <div id="main">
+                <div class="center-area">
+                    <div class="home">
+                        <% if (posts.length > 0) { %>
+                            <% posts.forEach(post => { %>
+
+                                <a class="singlepost" href="/singlepost/<%= post.id %>">
+                                    <h3 class="title">
+                                        <%= post.title %>
+                                    </h3>
+                                    <p class="body">
+                                        <%= post.body %>
+                                    </p>
+                                </a>
+                                <% }) %>
+                                    <% } else { %>
+                                        <p>You did not post anything...</p>
+                                        <% } %>
+                    </div>
+                </div>
+            </div>
+            <%- include('./partials/footer.ejs') %>
+    </div>
 </body>
 
 </html>
