--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <div class="footer-wrapper">
     <div class="footer">
         <div class="logo">
-            <a href="posts"><img src="/images/logo-120.png" id="header-logo" alt="logo" /></a>
+            <a href="/posts"><img src="/images/logo-120.png" id="header-logo" alt="logo" /></a>
         </div>
         <div class="info">
             <h2>postIt Inc.</h2>
