--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,14 +1,14 @@
 <div class="header-wrapper">
     <div class="header">
         <div class="logo">
-            <a href="posts"><img src="/images/logo.png" id="header-logo" alt="logo" /></a>
+            <a href="/posts"><img src="/images/logo.png" id="header-logo" alt="logo" /></a>
         </div>
         <div class="search">
             <div class="search-box">
                 <input type="search" id="search-box" placeholder="" />
             </div>
             <div class="search-button">
-                <input type="submit" id="search-button" value="Search" onclick="location.href='posts'" />
+                <input type="submit" id="search-button" value="Search" onclick="location.href='/posts'" />
             </div>
         </div>
         <div class="profile-picture" id="current-user-pfp">
