--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/posts.css">
-    <link rel="stylesheet" href="/css/post.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/posts.css">
+    <link rel="stylesheet" href="/css/post.css">
     <title>Posts</title>
 </head>
 
@@ -17,13 +17,16 @@
             <div id="main">
                 <div class="center-area">
                     <div class="home">
-                        <button onclick="location.href='/addnewpost'">Create new post</button>
+                        <div class="interact">
+                            <p>To open a post click on its title.</p>
+                            <button onclick="location.href='/addnewpost'">Create new post</button>
+                        </div>
                         <% if (posts.length > 0) { %>
                             <% posts.forEach(post => { %>
                                 <div class="post">
                                     <div class="post-header">
                                         <div class="title">
-                                            <p>
+                                            <p onclick="location.href='/singlepost/<%= post.id %>'">
                                                 <%= post.title %>
                                             </p>
                                         </div>
