--- a/views/singlepost.ejs
+++ b/views/singlepost.ejs
@@ -16,6 +16,9 @@
         <%- include('./partials/header.ejs') %>
             <div id="main">
                 <div class="center-area">
+                    <h1>Post nr.
+                        <%= posts.id %>
+                    </h1>
                     <div class="post">
                         <div class="post-header">
                             <div class="title">
