--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,6 +2,10 @@
     <div class="header">
         <div class="logo">
             <a href="/posts"><img src="/images/logo.png" id="header-logo" alt="logo" /></a>
+            <div class="nav">
+                <a href="/posts">Posts</a> |
+                <a href="/addnewpost">Create a post</a>
+            </div>
         </div>
         <div class="search">
             <div class="search-box">
