--- a/views/addnewpost.ejs
+++ b/views/addnewpost.ejs
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/addnewpost.css">
     <title>Create a post</title>
 </head>
 
@@ -18,10 +19,10 @@
                         <h1>New post</h1>
                         <form action="/posts" method="POST">
                             <label for="title">Post title:</label>
-                            <input type="text" id="title" name="title" required><br><br>
+                            <input type="text" id="title" name="title" class="input-box" required><br><br>
                             <label for="body">Post body:</label>
-                            <input type="text" id="body" name="body" required><br><br>
-                            <button type="submit">Submit</button>
+                            <input type="text" id="body" name="body" class="input-box" required><br><br>
+                            <button type="submit" class="submit-button">Submit</button>
                         </form>
                     </div>
                 </div>
